image height fix on mobile

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -58,7 +58,7 @@ margin:20vh !important;
 // body.blogpost {overflow-y: scroll !important;}
 
 	body.blogpost .featured-image1 {border:0px solid #ff0000 !important; max-height: 70vh !important; max-width: 100vw !important; }
-	body.blogpost .effects {aspect-ratio: inherit !important; max-height: 95vh !important; height:35vh; padding:2vh 0 !important; overflow:hidden !important;}
+	body.blogpost .effects {aspect-ratio: inherit !important; max-height: 95vh !important; padding:2vh 0 !important; overflow:hidden !important;}
 	body.blogpost section .back{display:none !important;}
 	body.blogpost section{margin:10vh 0 !important;}
 
@@ -1779,6 +1779,10 @@ body.homepage .horizontal-holder{height:inherit !important}
 
 	.featured-image1{max-height: 36vh !important; margin-top:1rem !important
 		;}
+
+		.imageonly featured-image1{max-height: inherit !important;}	
+
+
 	.flexbutt{
 		flex-direction: column !important;
 	}
